<resources>
    <string name="app_name">Appartoo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Réglages</string>
    <string name="apply_to_offer">"Postuler à l'annonce"</string>
    <string name="action_send_message">Envoyer un message</string>
    <string name="write_comment">Ecrire un commentaire</string>
    <string name="recommendations">Recommendations</string>
    <string name="note">Note globale</string>
    <string name="age">ans</string>
    <string name="connection_failed">La connexion au serveur a échouée.</string>
    <string name="progress_bar_title">Connexion au serveur</string>
    <string name="progress_bar_description">Chargement des entrées</string>
    <string name="mail">Email</string>
    <string name="password">Mot de passe</string>
    <string name="connect_with_fb">Connectez-vous avec Facebook</string>
    <string name="signup"><u>Inscrivez-vous à Appartoo</u></string>
    <string name="connect">Connexion</string>
    <string name="man">Homme</string>
    <string name="woman">Femme</string>
    <string name="single">Célibataire</string>
    <string name="couple">En couple</string>
    <string name="smoker">Fumeur</string>
    <string name="non_smoker">Non fumeur</string>
    <string name="student">Étudiant</string>
    <string name="birthdate">Date de naissance</string>
    <string name="description">Description</string>
    <string name="title">Titre</string>
    <string name="city">Ville</string>
    <string name="keyword_and_price">Type et prix</string>
    <string name="start">Début</string>
    <string name="rooms">Chambres</string>
    <string name="end">Fin</string>
    <string name="message">Message</string>
    <string name="fullname">Firstname Lastname</string>
    <string name="year_age">ans</string>
    <string name="euro">€</string>
    <string name="cancel">Annuler</string>
    <string name="ok">OK</string>
    <string name="no_picture">Aucune image</string>
    <string name="proposed_by">Proposé par : </string>
    <string name="viewed">Vu</string>
    <string name="viewed_by">Vu par</string>
    <string name="everybody">Tout le monde</string>
    <string name="email">Email</string>
    <string name="profiles">Profils</string>
    <string name="offers">Annonces</string>
    <string name="place">Lieu</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="activated">Activée</string>
    <string name="desactivated">Désactivée</string>
    <string name="comment">Commentaire</string>
    <string name="no_note">Aucune note</string>
    <string name="write_message">Ecrivez un message</string>
    <string name="location">Localisation</string>
    <string name="price">Prix</string>
    <string name="freelancer">Indépendant</string>
    <string name="retired">Retraité</string>
    <string name="salary">Salarié</string>
    <string name="unemployed">Sans emploi</string>
    <string name="search_results">Résultats de la recherche</string>
    <string name="facebook_user">Connecté avec Facebook</string>
    <string name="join_appartoo">Rejoignez Appartoo</string>
    <string name="warning_condition">En continuant vous acceptez les conditions d\'utilisation.</string>
    <string name="see_condition"><u>Voir les conditions.</u></string>
    <string name="go_further">Continuer</string>
    <string name="begin">Commencer</string>
    <string name="ask_informations">Entrez vos informations</string>
    <string name="confirm_password_signup">Confirmez le mot de passe</string>
    <string name="gender_configure_profile">Quel est votre sexe ?</string>
    <string name="worker_configure_profile">Quel est votre situation ?</string>
    <string name="birthdate_configure_profile">Quel est la date de votre anniversaire ?</string>
    <string name="status_configure_profile">Quel est votre statut ?</string>
    <string name="smoker_configure_profile">Fumez-vous ?</string>
    <string name="finish_signup">"Terminer l'inscription"</string>
    <string name="complete_profile">Compléter mon profil</string>
    <string name="congratulations">Félicitations !</string>
    <string name="end_of_signup">"Vous êtes maintenant inscrit. Vous pouvez configurer votre profil ou appuyer sur le bouton \"Terminer l'inscription\" pour vous connecter."</string>
    <string name="not_informed">Non renseigné</string>
    <string name="drawer_profile">Mon profil</string>
    <string name="drawer_offers">Parcourir les offres</string>
    <string name="drawer_search">Recherche</string>
    <string name="drawer_logout">Déconnexion</string>
    <string name="drawer_messages">Mes messages</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the issue !</string>
    <string name="crash_dialog_title">"Appartoo s'est arrêté"</string>
    <string name="crash_dialog_text">"Une erreur inattendue s'est produite, forçant l'arrêt de l'application. Appuyez sur OK pour nous envoyer un rapport détaillé et nous aider à améliorer l'application."</string>
    <string name="crash_dialog_comment_prompt">"Aidez-nous en nous décrivant les étapes qui ont précédé l'arrêt : (optionnel)"</string>
    <string name="crash_dialog_ok_toast">"Merci pour votre participation !"</string>
    <string name="confirm_accept_candidate">Êtes-vous sûr de vouloir accepter ce candidat ?</string>
    <string name="confirm_refuse_candidate">Êtes-vous sûr de vouloir refuser ce candidat ?</string>
    <string name="candidate_accept">Accepter le candidat</string>
    <string name="candidate_accepted">La candidature a bien été acceptée</string>
    <string name="candidate_refuse">Refuser le candidat</string>
    <string name="candidate_refused">La candidature a bien été refusée</string>
    <string name="conversation_disabled">Conversation désactivée</string>
    <string name="modify_profile">Modifier mon profil</string>
    <string name="my_offers">Mes annonces</string>
    <string name="title_activity_login">Connexion</string>
    <string name="title_activity_sign_up">Inscription</string>
    <string name="continue_without_login"><u>Continuer sans connexion</u></string>
    <string name="accept_animals">Animaux acceptés</string>
    <string name="doesnt_accept_animals">Animaux non acceptés</string>
    <string name="accept_smokers">Fumeurs acceptés</string>
    <string name="doesnt_accept_smokers">Fumeurs non acceptés</string>
    <string name="indifferent">Indifférent</string>
    <string name="i_research_offers">Je recherche des annonces</string>
    <string name="i_research_profiles">Je recherche des locataires</string>
    <string name="lastname">Nom</string>
    <string name="firstName">Prénom</string>
    <string name="phone">Téléphone</string>
    <string name="inRelationship">En couple</string>
    <string name="generous">Généreux</string>
    <string name="organized">Ordonné</string>
    <string name="maniac">Maniac</string>
    <string name="party_goer">Fêtard</string>
    <string name="spendthrift">Dépensier</string>
    <string name="musician">Musicien</string>
    <string name="traveller">Voyageur</string>
    <string name="cook">Cuisinier</string>
    <string name="layabout">Glandeur</string>
    <string name="nerdy">Geek</string>
    <string name="worker">Salarié</string>
    <string name="non_worker">Non salarié</string>
    <string name="situation">Activité</string>
    <string name="important_infos">Informations importantes</string>
    <string name="personnal_infos">A propos de vous</string>
    <string name="save_infos">Enregistrer mes informations</string>
    <string name="facebook">Facebook</string>
    <string name="keyword">Type</string>
    <string name="from">Du</string>
    <string name="to">Au</string>
    <string name="address">Adresse</string>
    <string-array name="keywords">
        <item name="location">Location</item>
        <item name="sublocation">Sous-location</item>
        <item name="shareflat">Colocation</item>
    </string-array>
    <string name="euro_per_month">"€/mois"</string>
    <string name="unknown_city">Ville non reconnue</string>
    <string name="room_or_rooms">"chambre(s)"</string>
    <string name="no_description">(Aucune description)</string>
    <string name="no_job_refered">(Aucun emploi renseigné)</string>
    <string name="what_are_you_looking_for">Que recherchez-vous ?</string>
    <string name="looking_for_a_shared_flat">Je cherche une colocation</string>
    <string name="looking_for_a_flatmate">Je cherche un colocataire</string>
    <string name="rent_my_flat">Je veux louer mon appartement</string>
    <string name="situation_configure_profile">Quelle est votre situation ?</string>
    <string name="company_configure_profile">Quelle est votre entreprise ?</string>
    <string name="society">Entreprise</string>
    <string name="function_configure_profile">Quelle est votre fonction ?</string>
    <string name="function">Fonction</string>
    <string name="contract_configure_profile">Quelle est votre contrat ?</string>
    <string name="contract">Contrat</string>
    <string-array name="contracts">
        <item name="CDI">CDI</item>
        <item name="CDD">CDD</item>
    </string-array>
    <string name="income_configure_profile">Quelle est votre revenu mensuel ?</string>
    <string name="income">Revenu</string>
    <string name="garantor_configure_profile">Avez-vous des garants ?</string>
    <string name="presentation_configure_profile">Qui êtes-vous ?</string>
    <string name="end_of_configuration">"Votre profil a été complété. Vous pouvez le modifier à tout moment dans les réglages."</string>
    <string name="finish_configuration">"Terminer la configuration."</string>
    <string name="go_to_offer_list">"Voir les offres."</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="desactivate_offer">"Désactiver l'annonce"</string>
    <string name="modify_offer">"Modifier l'annonce"</string>
    <string name="activate_offer">"Activer l'annonce"</string>
    <string name="confirm_desactivate">"Êtes-vous sûr de vouloir désactiver l'annonce ?"</string>
    <string name="confirm_activate">"Êtes-vous sûr de vouloir activer l'annonce ?"</string>
    <string name="offer_is_now_activated">"L'offre est maintenant active."</string>
    <string name="offer_is_now_desactivated">"L'offre est maintenant desactivée."</string>
    <string name="more_options">"Plus d'options"</string>
    <string name="search">Rechercher</string>
    <string name="where_are_you_searching">Où recherchez-vous ?</string>
    <string name="zero">0</string>
    <string name="two_thousands">2000</string>
    <string name="i_accept_smokers">"J'accepte les fumeurs"</string>
    <string name="i_dont_accept_smokers">"Je n'accepte pas de fumeur"</string>
    <string name="i_accept_animals">"J'accepte les animaux"</string>
    <string name="i_dont_accept_animals">"Je n'accepte pas d'animal"</string>
    <string name="save_my_offer">Enregistrer mon annonce</string>
    <string name="offer_title">"Titre de l'annonce"</string>
    <string name="offer_keyword">"Type de l'annonce"</string>
    <string name="price_per_month">Prix (par mois)</string>
    <string name="rooms_available">Nombre de chambres disponibles</string>
    <string name="offer_description">"Description de l'annonce"</string>
    <string name="take_a_picture">Caméra</string>
    <string name="choose_from_gallery">Gallerie</string>
    <string name="unable_to_load_camera">"Impossible de charger l'appareil photo"</string>
    <string name="unable_to_load_gallery">"Impossible de charger la gallerie"</string>
    <string name="add_residents">Ajouter des résidents</string>
    <string name="add_resident">Ajouter un résident</string>
    <string name="add_resident_modify">Modifiez la liste des résidents</string>
</resources>