<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_offers"
            android:icon="@drawable/house"
            android:title="@string/drawer_offers"/>
        <item
            android:id="@+id/drawer_search"
            android:icon="@drawable/search"
            android:title="@string/drawer_search"/>
        <item
            android:id="@+id/drawer_messages"
            android:icon="@drawable/message_drawer"
            android:title="@string/drawer_messages"/>
        <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/profile"
            android:title="@string/drawer_profile"/>
        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/shutdown"
            android:title="@string/drawer_logout"/>
    </group>
</menu>