<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/responsibleRecordFirstName"
            android:hint="@string/firstName"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/responsibleRecordLastName"
            android:hint="@string/lastname"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/responsibleRecordMail"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/mail" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/responsibleRecordIncome"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/income" />
</LinearLayout>