<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/background_light"
    tools:context="mobile.appartoo.activity.LoginActivity"
    android:gravity="center">

    <TextView
        style="@style/TitleSalmon"
        android:text="@string/income_configure_profile"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:id="@+id/textView" />

    <EditText
        android:layout_margin="20dp"
        android:singleLine="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="numberDecimal"
        android:gravity="center"
        android:hint="@string/income"
        android:id="@+id/incomeConfigureProfile"/>

    <Button
        style="@style/ButtonSalmon"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/go_further"
        android:onClick="nextView"
        android:layout_alignParentBottom="true"
        android:prompt="@string/contract"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_square_salmon" />

</RelativeLayout>