<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="mobile.appartoo.fragment.UserProfileSettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <android.support.percent.PercentRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/offerFlatImage">
                <LinearLayout
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="200%"
                    android:gravity="bottom|center_horizontal"
                    android:layout_marginBottom="20dp">
                    <ImageView
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/default_profile_picture"/>
                </LinearLayout>
            </android.support.percent.PercentRelativeLayout>
            <TextView
                style="@style/ProfileSection"
                android:text="@string/situation"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <TextView
                    style="@style/Paragraph"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/worker"/>
                <Switch
                    style="@style/NoTextSwitch"/>
            </LinearLayout>
            <TextView
                style="@style/ProfileSection"
                android:text="@string/important_infos"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:layout_weight="1"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstName"
                    android:layout_weight="1"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/inRelationship"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smoker"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                style="@style/ProfileSection"
                android:text="@string/personnal_infos"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/generous"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/musician"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/organized"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/traveller"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/maniac"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="cook"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/party_goer"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/layabout"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spendthrift"
                        android:layout_weight="1"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                    <TextView
                        style="@style/Paragraph"
                        android:padding="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_weight="1"
                        android:text="@string/nerdy"/>
                    <Switch
                        style="@style/NoTextSwitch" />
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:background="@drawable/rounded_square_blue"
                android:id="@+id/signUp"
                android:layout_alignParentBottom="true">
                <ImageView
                    android:layout_margin="5dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/facebook_white"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/connect_with_fb"/>
            </LinearLayout>
            <Button
                style="@style/ButtonSalmon"
                android:layout_margin="20dp"
                android:layout_height="40dp"
                android:text="Supprimer mon compte"
                android:background="@drawable/rounded_square_salmon" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
