<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/TitleSalmon"
            android:gravity="center"
            android:text="@string/join_appartoo"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center"
            android:layout_centerInParent="true">
            <TextView
                style="@style/Paragraph"
                android:gravity="center"
                android:textColor="@color/colorSalmon"
                android:text="@string/warning_condition"/>
            <TextView
                style="@style/Paragraph"
                android:text="@string/see_condition"
                android:textColor="@color/colorBlueFb"/>
        </LinearLayout>

        <Button
            style="@style/ButtonSalmon"
            android:text="@string/go_further"
            android:onClick="nextView"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_square_salmon"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</ScrollView>