<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/TitleSalmon"
            android:text="@string/congratulations"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_centerInParent="true">
            <TextView
                style="@style/Paragraph"
                android:paddingBottom="16dp"
                android:gravity="center"
                android:textColor="@color/colorSalmon"
                android:text="@string/end_of_signup"/>
            <Button
                style="@style/ButtonSalmon"
                android:text="@string/complete_profile"
                android:onClick="nextView"
                android:background="@drawable/square_salmon" />
        </LinearLayout>

        <Button
            style="@style/ButtonSalmon"
            android:layout_margin="16dp"
            android:text="@string/finish_signup"
            android:onClick="goToMainActivity"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="16dp"
            android:background="@drawable/square_salmon" />
    </RelativeLayout>
</ScrollView>