<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/garantorRecordFirstName"
            android:hint="@string/firstName"
            android:inputType="textPersonName"
            android:gravity="center"
            android:maxLines="1"
            android:layout_weight="1"/>
        <View
            android:layout_width="16dp"
            android:layout_height="0dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/garantorRecordLastName"
            android:hint="@string/lastname"
            android:maxLines="1"
            android:inputType="textPersonName"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <EditText
        android:layout_margin="5dp"
        android:maxLines="1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/garantorRecordMail"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:hint="@string/mail" />
    <EditText
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:maxLines="1"
        android:layout_height="wrap_content"
        android:id="@+id/garantorRecordIncome"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:hint="@string/income" />
</LinearLayout>