<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            style="@style/TitleSalmon"
            android:text="@string/congratulations"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"/>

        <TextView
            style="@style/Paragraph"
            android:gravity="center"
            android:paddingRight="30dp"
            android:paddingLeft="30dp"
            android:paddingBottom="10dp"
            android:textColor="@color/colorSalmon"
            android:text="@string/end_of_configuration"
            android:layout_centerInParent="true"/>

        <Button
            style="@style/ButtonSalmon"
            android:layout_margin="16dp"
            android:text="@string/go_to_offer_list"
            android:layout_alignParentBottom="true"
            android:onClick="nextView"
            android:background="@drawable/square_salmon" />
    </RelativeLayout>
</ScrollView>